New in v0.5.00 (2008/08/??)
---------------------------
bug #23985: --no-encryption option does not work in 0.4.12
https://savannah.nongnu.org/bugs/index.php?23985

patch #6596: re-organize backend module structure
https://savannah.nongnu.org/patch/index.php?6596

patch #6589: S3 european bucket support
https://savannah.nongnu.org/patch/index.php?6589

patch #6353: Concurrency for volume encryption and upload.
https://savannah.nongnu.org/patch/index.php?6353


New in v0.4.12 (2008/07/22)
---------------------------
Dan Muresan created a patch to minimize the number of password
prompts.  To do so, it sometimes requests a password once without
confirmation; if later it turns out that a full backup is needed,
the user is prompted for confirmation.

bug #23540: doc bug in man page (environment FTP_PASSWORD)
https://savannah.nongnu.org/bugs/index.php?23540

bug #23362: Documentation for --version, --time-separator <char>
https://savannah.nongnu.org/bugs/index.php?23362

bug #23283: interactive passphrase query is suboptimal
https://savannah.nongnu.org/bugs/index.php?23283

bug #23066 was not actually applied to 0.4.11.  Its here now.
https://savannah.nongnu.org/bugs/index.php?23066

bug #22826: regressions caused by boto 1.1c
https://savannah.nongnu.org/bugs/index.php?22826


New in v0.4.11 (2008/05/05)
---------------------------
Changes applied to allow duplicity to run under Python 2.3 again.

patch #6485: Reinstate patch #6340 with a detailed explanation.
https://savannah.nongnu.org/patch/index.php?6485

bug #23066: ssh uris with given portnumbers are not handled correctly
https://savannah.nongnu.org/bugs/index.php?23066


New in v0.4.10 (2008/03/27)
---------------------------
bug #22728: FTP backend fails on empty directory
https://savannah.nongnu.org/bugs/index.php?22728

patch #6374: Duplicity --tempdir patch documentation.
https://savannah.nongnu.org/patch/index.php?6374

patch #6375: Duplicity reports the epoch for a nonexistant last full backup date